[package]
name = "streams"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Raman Hafiyatulin <r.gafiyatullin@me>"]
documentation = "https://docs.rs/streams"
repository = "https://github.com/RGafiyatullin/streams-rs"
description = "A collection of stream-extensions that are missing in the `futures` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3"
pin-project = "^1"

[dev-dependencies]
tokio = {version = "^1", features = ["time", "rt-multi-thread", "macros"]}
